--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tailwind-Collection",
+  "name": "tailwind-collection",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
